--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,22 +1,6 @@
 
 [buildout]
 extends =
-    https://dist.plone.org/release/5.1.6/versions.cfg
-
-parts =
-    instance
-
-[instance]
-recipe = plone.recipe.zope2instance
-user = admin:admin
-http-address = 8080
-eggs =                 
-    Plone
-    eea.facetednavigation
-
-
-[versions]
-eea.facetednavigation=13.5
-
-
-
+    etc/base.cfg
+    ../mars/etc/sys/settings-prod.cfg
+    etc/sys/settings-prod.cfg
