--- a/etc/plone/project.cfg
+++ b/etc/plone/project.cfg
@@ -1,9 +1,19 @@
 [buildout]
 eggs =
     Plone
+    collective.zipfiletransport
     eea.facetednavigation
+    rbins.csvimport
 zcml =
 extra-paths=
+sources = sources
+sources-dir=${buildout:directory}/src
+auto-checkout +=
+    rbins.csvimport
+
+[sources]
+rbins.csvimport = git https://github.com/RBINS/rbins.csvimport.git
+
 [versions]
 eea.facetednavigation=13.5
 
