--- a/etc/base.cfg
+++ b/etc/base.cfg
@@ -1,4 +1,5 @@
 [buildout]
+extensions=mr.developer
 extends=
     https://dist.plone.org/release/5.1.6/versions.cfg
     ../../mars/etc/sys/settings.cfg
