--- a/etc/plone/project.cfg
+++ b/etc/plone/project.cfg
@@ -1,9 +1,11 @@
 [buildout]
 eggs =
     Plone
-    collective.zipfiletransport
     eea.facetednavigation
     rbins.csvimport
+#    Products.CMFBibliographyAT
+    collective.excelexport
+
 zcml =
 extra-paths=
 sources = sources
@@ -16,6 +18,8 @@ rbins.csvimport = git https://github.com/RBINS/rbins.csvimport.git
 
 [versions]
 eea.facetednavigation=13.5
+zc.buildout = 2.13.3
+setuptools = 44.1.0
 
 [env]
 recipe = collective.recipe.environment
